--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -6,6 +6,7 @@
     box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
     -webkit-box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
     -moz-box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
+    width: 100%;
 }
 
 .nav ul li {
