--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,10 @@
 body {
   background-color: #fff;
   font-family: "Poppins", sans-serif;
+  --title: 100px;
+  --sub-title: 24px;
+  --paragraph: 16px;
+  --button: 20px;
 }
 
 #frame1 {
@@ -20,13 +24,13 @@ body {
 
 #frame1 .sub-title {
   font-weight: bold;
-  font-size: 24px;
+  font-size: var(--sub-title);
   margin: 0;
 }
 
 #frame1 .title {
   font-weight: bold;
-  font-size: 100px;
+  font-size: var(--title);
 }
 
 #frame1 .btn-hp {
@@ -49,10 +53,12 @@ body {
 
 #frame1 .btn-hp1 {
   background-color: #004fce;
+  font-size: var(--button);
   color: #fff;
 }
 
 #frame1 .btn-hp2 {
+  font-size: var(--button);
   background-color: orange;
 }
 
@@ -85,7 +91,7 @@ body {
 .item2 .teks2,
 .item3 .teks3 {
   background-color: #d9d9d9;
-  font-size: 16px;
+  font-size: var(--paragraph);
   width: 100%;
   font-weight: bold;
   margin-top: 1rem;
@@ -142,17 +148,17 @@ body {
 
 #frame2 {
   background: #f6f6f6;
-  height: 100vh;
+  height: 850px;
   position: relative;
 }
 
 #frame2 .rectangle {
-  height: 85vh;
+  height: 80%;
   position: absolute;
-  width: 145vh;
-  border-radius: 3vh;
+  width: 80%;
+  border-radius: 30px;
   background-color: #fff;
-  padding: 3vh;
+  padding: 2%;
   border: 1px solid black;
 }
 
@@ -165,20 +171,20 @@ body {
 }
 
 #frame2 .rectangle .parent-content .left-content .image-content img {
-  width: 63vh;
-  height: 58vh;
-  border-top-right-radius: 3vh;
-  border-bottom-right-radius: 3vh;
+  width: 550px;
+  height: 480px;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
   object-fit: cover;
 }
 
 #frame2 .rectangle .parent-content .left-content .image-content .circle {
-  height: 5vh;
-  width: 5vh;
+  height: 40px;
+  width: 40px;
   position: absolute;
-  top: 3vh;
+  top: 4%;
   border-radius: 50%;
-  right: 4vh;
+  right: 4%;
   background-color: #111;
   opacity: 70%;
 }
@@ -188,40 +194,39 @@ body {
   gap: 0.5rem;
   transform: scale(0.9);
   margin-left: -22px;
-  margin-top: 1vh;
+  margin-top: 7%;
 }
 
 #frame2 .rectangle .parent-content .left-content .button button {
   font-family: "Poppins", sans-serif;
-  border-radius: 3vh;
-  padding: 1vh 3vh 1vh 3vh;
-  font-size: 2.5vh;
+  border-radius: 30px;
+  padding: 1% 3%;
+  font-size: var(--button);
   border: none;
-  font-weight: 500;
-  margin-top: 5vh;
+  font-weight: 600;
 }
 
 #frame2 .rectangle .parent-content .left-content .button .fa-angle-right,
 #frame3 .middle .parent-card .card button .fa-angle-right {
   background-color: transparent;
   border: 1px solid white;
-  width: 3vh;
-  font-size: 2vh;
-  border-radius: 2vh;
-  padding-top: 0.4vh;
-  padding-bottom: 0.4vh;
-  margin-left: 0.5vh;
+  width: 11%;
+  font-size: var(--paragraph);
+  border-radius: 30px;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  margin-left: 2%;
 }
 
 #frame2 .rectangle .parent-content .left-content .button .btn1 {
   background-color: #004fce;
-  width: 27vh;
+  width: 220px;
   color: #fff;
 }
 
 #frame2 .rectangle .parent-content .left-content .button .btn2 {
   background-color: orange;
-  width: 25vh;
+  width: 220px;
 }
 
 #frame2 .rectangle .parent-content .left-content .button .btn2 .fa-angle-right{
@@ -229,25 +234,25 @@ body {
 }
 
 #frame2 .rectangle .parent-content .right-content {
-  margin-left: 4vh;
+  margin-left: 5%;
 }
 
 #frame2 .rectangle .parent-content .right-content .box {
-  width: 65vh;
+  width: 100%;
 }
 
 #frame2 .rectangle .parent-content .right-content .box .title-box {
-  padding-top: 2vh;
-  padding-bottom: 1vh;
+  padding-top: 4%;
+  padding-bottom: 2%;
   background-color: #004fce;
   text-align: center;
   color: #fff;
-  border-top-right-radius: 3vh;
-  border-top-left-radius: 3vh;
+  border-top-right-radius: 30px;
+  border-top-left-radius: 30px;
 }
 
 #frame2 .rectangle .parent-content .right-content .box .title-box h1 {
-  font-size: 3vh;
+  font-size: var(--sub-title);
   font-weight: bold;
 }
 
@@ -257,11 +262,12 @@ body {
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
   position: relative;
+  height: 230px;
 }
 
 #frame2 .rectangle .parent-content .right-content .box .body-box p {
   line-height: 2;
-  font-size: 2.2vh;
+  font-size: calc(var(--paragraph) + 2px);
 }
 #frame2 .rectangle .parent-content .right-content .box .body-box .swicth {
   right: 2rem;
@@ -274,7 +280,7 @@ body {
 #frame2 .rectangle .parent-content .right-content .box .body-box .swicth i {
   background-color: #d1d1d1;
   padding: 0.3rem;
-  font-size: 2vh;
+  font-size: var(--button);
   border-radius: 2rem;
 }
 
@@ -283,12 +289,12 @@ body {
 }
 
 #frame2 .rectangle .parent-content .right-content .mini-image .image img {
-  width: 31vh;
+  width: 45%;
 }
 
 #frame2 .rectangle .parent-content .right-content .mini-image .image {
   display: flex;
-  gap: 1rem;
+  gap: 7%;
 }
 
 #frame3 {
@@ -381,6 +387,10 @@ body {
   padding: 1vh 0.4vh 1vh 0.4vh;
 }
 
+#frame3 .middle .parent-card .card button i {
+  width: 14% !important;
+}
+
 #frame3 .bottom .parent .side-left .top,
 .side-right .top {
   width: 8vh;
@@ -411,9 +421,8 @@ body {
 }
 
 #frame4 {
-  height: 120vh;
+  height: 880px;
   background-color: #fff;
-  padding-top: 5vh;
 }
 
 #frame4 .line {
@@ -424,7 +433,7 @@ body {
 #frame4 .line .left,
 .line .center,
 .line .right {
-  height: 3vh;
+  height: 30px;
   width: 100%;
   background-color: #004fce;
   filter: brightness(0.8);
@@ -432,29 +441,31 @@ body {
 
 #frame4 .line .center {
   filter: brightness(1);
-  height: 4vh;
+  height: 40px;
 }
 
 #frame4 .review {
   font-family: "Poppins", sans-serif;
-  font-size: 3vh;
-  padding-top: 3vh;
+  padding-top: 2%
+}
+
+#frame4 .review h1 {
+  font-size: calc(var(--title) - 35px);
 }
 
 #frame4 .parent-card {
   display: grid;
-  margin-top: 2vh;
   grid-template-columns: auto auto auto;
   scale: 0.9;
-  gap: 2vh;
+  gap: 2%;
 }
 
 #frame4 .parent-card .card {
   border: 1px solid black;
   background-color: #fdfdfd;
-  padding: 3vh;
-  border-radius: 5vh;
-  height: 100%;
+  padding: 4%;
+  border-radius: 30px;
+  height: calc(100% + 4%);
 }
 
 #frame4 .parent-card .card .card-head {
@@ -464,60 +475,61 @@ body {
 }
 
 #frame4 .parent-card .card .card-head .label {
-  font-size: 2.2vh;
+  font-size: var(--button);
   background-color: #004fce;
   color: white;
-  padding: 1vh 2vh;
-  border-radius: 30vh;
+  padding: 2% 3%;
+  border-radius: 30px;
   font-weight: 600;
 }
 
 #frame4 .parent-card .card .card-head .date {
-  font-size: 2.2vh;
-  padding-top: 1.3vh;
+  font-size: calc(var(--paragraph) + 2px);
+  padding-top: 3%;
 }
 
 #frame4 .parent-card .card .card-body h1 {
-  font-size: 5vh;
+  font-size: calc(var(--sub-title) + 8px);
 }
 
 #frame4 .parent-card .card .card-body p {
-  font-size: 2.3vh;
+  font-size: var(--paragraph);
 }
 
 #frame4 .parent-card .card .card-body ul li {
-  font-size: 2.3vh;
+  font-size: var(--paragraph);
 }
 
 #frame4 .parent-card .card .card-footer {
   display: flex;
   justify-content: start;
   background-color: transparent;
-  gap: 2vh;
-  padding-top: 3vh;
+  gap: 2%;
+  padding-top: 5%;
+  height: 65px;
 }
 
 #frame4 .parent-card .card .card-footer img {
-  width: 5.5vh;
-  height: 5.5vh;
+  width: 40px;
+  height: 40px;
 }
 
 #frame4 .parent-card .card .card-footer p {
-  font-size: 2.3vh;
-  padding-top: 0.9vh;
+  font-size: var(--paragraph);
+  padding-top: 1.5%;
 }
 
 #frame4 .parent-card .center {
   display: flex;
   flex-direction: column;
-  gap: 2vh;
+  gap: 4%;
 }
 
 #frame5 {
   background-color: #004fce;
-  height: 108vh;
+  height: 880px;
   position: relative;
-  padding-top: 5vh;
+  padding-top: 4%;
 }
 
 #frame5 .text-behind {
@@ -537,27 +549,27 @@ body {
 }
 
 #frame5 .top .icon-left {
-  margin-left: 4vh;
+  margin-left: 4%;
   display: flex;
   flex-direction: column;
-  gap: 1vh;
+  gap: 5%;
 }
 
 #frame5 .top .icon-right {
-  margin-right: 4vh;
+  margin-right: 4%;
 }
 
 #frame5 .top .icon-left .top {
-  width: 4vh;
-  height: 4vh;
-  border-radius: 1vh;
+  width: 35px;
+  height: 35px;
+  border-radius: 10px;
   background-color: #fff;
-  margin-left: 3.5vh;
+  margin-left: 50%;
 }
 
 #frame5 .top .icon-left .bottom {
-  width: 5.5vh;
-  height: 4.5vh;
+  width: 45px;
+  height: 35px;
   border-radius: 1vh;
   background-color: orange;
 }
@@ -565,14 +577,14 @@ body {
 #frame5 .text h1 {
   color: #fff;
   font-weight: 700;
-  font-size: 9vh;
+  font-size: calc(var(--title) - 35px);
   margin-top: 3vh;
 }
 
 #frame5 .top .icon-right .top {
-  width: 4vh;
-  height: 4vh;
-  border-radius: 1vh;
+  width: 35px;
+  height: 35px;
+  border-radius: 10px;
   background-color: #fff;
 }
 
@@ -583,65 +595,66 @@ body {
 
 #frame5 .center .left .rectangle {
   position: relative;
-  width: 70vh;
-  margin-top: 7vh;
-  height: 60vh;
-  border-top-right-radius: 5vh;
-  border-bottom-right-radius: 5vh;
+  width: 530px;
+  margin-top: 15%;
+  height: 500px;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
   background: linear-gradient(#fff, #002a67);
 }
 
 #frame5 .center .left .rectangle .image {
   position: absolute;
-  left: 0vh;
-  top: -9vh;
+  left: 0;
+  top: -9%;
 }
 
 #frame5 .center .left .rectangle .image img {
-  width: 42vw;
+  width: 125%;
 }
 
 #frame5 .center .right .info {
   display: grid;
   grid-template-columns: auto auto;
-  gap: 4vh;
+  gap: 5%;
   scale: 0.8;
-  margin-left: 6vh;
+  margin-top: 4%;
+  margin-left: 5%;
 }
 
 #frame5 .center .right .info .card {
-  padding: 5vh;
+  padding: 8%;
   position: relative;
 }
 
 #frame5 .center .right .info .card .icon {
   position: absolute;
-  border-radius: 50vh;
-  width: 3vh;
-  height: 3vh;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
   background-color: #2c4e80;
 }
 
 #frame5 .center .right .info .card .content i {
   color: #fff;
-  font-size: 4vh;
+  font-size: var(--sub-title);
   background-color: #2c4e80;
-  border-radius: 50vh;
-  padding: 2vh;
-  margin-bottom: 3vh;
+  border-radius: 50%;
+  padding: 5%;
+  margin-bottom: 3%;
 }
 
 #frame5 .center .right .info .card .content h1 {
-  font-size: 3.5vh;
+  font-size: var(--sub-title);
   font-weight: 700;
 }
 
 #frame5 .center .right .info .card .content p {
-  font-size: 2.4vh;
+  font-size: var(--button);
 }
 
 #frame5 .center .right .info .item-top-left {
-  border-top-right-radius: 20vh;
+  border-top-right-radius: 150px;
 }
 
 #frame5 .center .right .info .item-top-left .icon {
@@ -650,7 +663,7 @@ body {
 }
 
 #frame5 .center .right .info .item-top-right {
-  border-top-left-radius: 20vh;
+  border-top-left-radius: 150px;
   text-align: right;
 }
 
@@ -660,7 +673,7 @@ body {
 }
 
 #frame5 .center .right .info .item-bottom-left {
-  border-bottom-right-radius: 20vh;
+  border-bottom-right-radius: 150px;
 }
 
 #frame5 .center .right .info .item-bottom-left .icon {
@@ -669,7 +682,7 @@ body {
 }
 
 #frame5 .center .right .info .item-bottom-right {
-  border-bottom-left-radius: 20vh;
+  border-bottom-left-radius: 150px;
   text-align: right;
 }
 
