--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1366px) {
+@media screen and (max-width: 1400px) {
   body {
     --title: 80px;
     --sub-title: 20px;
@@ -12,21 +12,13 @@
     height: var(--frame-adjust);
   }
 
+  #frame1 .title {
+    width: 60%;
+  }
+
   #frame1 .parent-content .right-content .rectangle .teks-vision .vision {
     font-size: 190px;
     color: #fff;
-  }
-
-    #frame1 .parent-content .left-content .preview .item1,
-  .item2,
-  .item3 {
-    width: var(--image-adjust);
-  }
-
-  #frame1 .parent-content .left-content .preview .item1 img,
-  .item2 img,
-  .item3 img {
-    width: var(--image-adjust);
   }
 
   #frame1 .parent-content .right-content .rectangle {
@@ -40,6 +32,10 @@
     width: 180%;
     position: absolute;
     margin-left: -90%;
+  }
+
+  #frame1 .parent-content .left-content .parent-preview {
+    width: 55%;
   }
 
   #frame5 .center .left .rectangle {
@@ -162,6 +158,10 @@
     object-fit: cover;
   }
 
+  #frame3 .middle .parent-card {
+    gap: 10vh;
+  }
+
   #frame5 .center .left .rectangle {
     width: 430px;
     margin-top: 15%;
@@ -182,6 +182,8 @@
 @media screen and (max-width: 1024px) {
   .navbar {
     margin-left: 5%;
+    --sub-title: 2vh;
+    --title: 3vh;
   }
 
   #frame1::before {
@@ -192,9 +194,9 @@
     left: 0;
     height: 100%;
     z-index: -1;
-    box-shadow: 10px 10px 290px 149px rgba(0,0,0,0.7) inset;
--webkit-box-shadow: 10px 10px 290px 149px rgba(0,0,0,0.7) inset;
--moz-box-shadow: 10px 10px 290px 149px rgba(0,0,0,0.7) inset;
+    box-shadow: 10px 10px 100px 10px rgba(0,0,0,0.7) inset;
+-webkit-box-shadow: 10px 10px 100px 10px rgba(0,0,0,0.7) inset;
+-moz-box-shadow: 10px 10px 100px 10px rgba(0,0,0,0.7) inset;
     background-image: url('/assets/img/orangvr.jpg');
     /* background-image: url('/assets/img/'); */
     background-size: cover;
@@ -212,41 +214,88 @@
     display: none;
   }
 
+  
   #frame1 .left-content {
-    margin: auto;
     margin-top: 3rem;
+    margin-left: 8%;
   }
 
-  #frame1 .sub-title {
-    text-align: center;
+  #frame2 .rectangle .parent-content {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  
+  #frame2 .rectangle .parent-content .left-content .image-content {
+    display: none;
   }
 
-  #frame1 .title {
-      font-weight: bold;
-      width: 100%;
-    font-size: var(--title);
-  }
-
-  #frame1 .btn-hp {
+  #frame2 .rectangle .parent-content .left-content .button {
+    margin-top: 0%;
     display: flex;
     justify-content: center;
   }
 
-  #frame1 .parent-content  {
-    margin-left: 5%;
-    margin-top: 10%;
+  #frame2 .rectangle .parent-content .left-content .button button {
+    font-family: "Poppins", sans-serif;
+    border-radius: 30px;
+    padding: 1% 2%;
+    font-size: 2.5vh;
+    width: 30%;
   }
 
-  #frame1 .parent-content .left-content hr {
-    display: none;
+  #frame2 .rectangle .parent-content .right-content {
+    margin-left: 2%;
+    margin-right: 2%;
   }
 
-  #frame1 .parent-content .left-content .preview {
-    display: none;
+  #frame2 .rectangle .parent-content .right-content .box {
+    width: 100%;
   }
 
-  #frame1 .parent-content .left-content .icon-scroll {
-    margin-top: 5%;
+  #frame2 .rectangle .parent-content .right-content .box .body-box {
+    height: 25vh;
+  }
+
+  #frame2 .rectangle .parent-content .right-content .mini-image .image {
+    display: flex;
+    gap: 4%;
+  }
+
+  #frame2 .rectangle .parent-content .right-content .mini-image .image img {
+    width: 100%;
+  }
+
+  #frame3 .topbar h1 {
+    font-size: 4vh;
+    font-weight: bold;
+    padding-top: 3vh;
+  }
+
+  #frame3 .top h1 {
+    font-size: 2.5vh;
+    font-weight: bold;
+  }
+  
+  #frame3 .top i {
+    font-size: 3vh;
+    border-radius: 50%;
+  }
+
+  #frame3 .middle .parent-card {
+    gap: 5vh;
+  }
+
+  #frame3 .middle .parent-card .card img {
+    width: 30vh;
+  }
+  
+  #frame3 .middle .parent-card .card h1 {
+    font-size: 2.5vh;
+    font-weight: bold;
+  }
+  
+  #frame3 .middle .parent-card .card p {
+    font-size: 2vh;
   }
 
   #frame5 .center .left .rectangle {
@@ -259,7 +308,11 @@
     border-bottom-right-radius: 30px;
     background: linear-gradient(#fff, #002a67);
   }
-  
+
+  #frame4 .parent-card .card {
+    height: calc(100%);
+  }
+
   #frame5 .center .left .rectangle .image {
     position: absolute;
     left: 0;
@@ -268,5 +321,178 @@
   
   #frame5 .center .left .rectangle .image img {
     width: 125%;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  #frame2 .rectangle .parent-content .left-content .image-content img {
+    width: 37vw;
+    height: 37vw;
+  }
+
+  #frame2 .rectangle .parent-content .left-content .button button {
+    font-size: 2vh;
+    width: 40%;
+  }
+
+  #frame2 .rectangle .parent-content .left-content .button .fa-angle-right,
+  #frame3 .middle .parent-card .card button .fa-angle-right {
+    background-color: transparent;
+    border: 1px solid white;
+    width: 13%;
+    font-size: 1.7vh;
+  }
+
+  #frame2 .rectangle .parent-content .right-content .box .body-box p {
+    line-height: 2;
+    font-size: calc(2vh);
+  }
+
+  #frame3 {
+    height: 100%;
+    margin-bottom: 15%;
+    background-color: #fff;
+  }
+
+  #frame3 .middle .text-back {
+    font-size: 40vw;
+    left: -30%;
+    top: 225%;
+    transform: rotate(90deg);
+    width: 100%;
+  }
+
+  #frame3 .middle .parent-card {
+    display: flex;
+    flex-direction: column;    
+    justify-content: center;
+    align-items: center;
+  }
+
+  #frame3 .middle .parent-card .card img {
+    width: 30vh;
+  }
+  
+  #frame3 .middle .parent-card .card h1 {
+    font-size: 2.5vh;
+    font-weight: bold;
+  }
+  
+  #frame3 .middle .parent-card .card p {
+    font-size: 2vh;
+  }
+  
+  #frame3 .middle .parent-card .card button {
+    border: none;
+    background-color: #004fce;
+    width: 60%;
+    color: #fff;
+    border-radius: 20vh;
+    font-weight: bold;
+    font-size: 2vh;
+    padding: 1vh 0.4vh 1vh 0.4vh;
+    transition: ease 0.3s;
+  }
+
+  #frame3 .bottom .parent b, #frame3 .bottom .parent i {
+    font-size: 1.5vh;
+  }
+
+    #frame3 .bottom .parent .side-left .top,
+  .side-right .top {
+    width: 7vh;
+    height: 2vh;
+  }
+
+  #frame3 .bottom .parent .side-left .bottom,
+  .side-right .bottom {
+    width: 10vh;
+    height: 2vh;
+    margin-top: 3vh;
+  }
+  
+  #frame3 .bottom .parent .side-right .bottom {
+    margin-left: -5vh;
+  }
+
+  #frame4 {
+    height: 100%;
+    margin-bottom: 5%;
+    background-color: #fff;
+  }
+
+  #frame4 .parent-card {
+    display: grid;
+    grid-template-columns: auto;
+    gap: 3%;
+  }
+
+  #frame4 .parent-card .card .card-body h1 {
+    font-size: 2.5vh;
+  }
+  
+  #frame4 .parent-card .card .card-body p {
+    font-size: 2vh;
+  }
+
+  #frame4 .parent-card .card .card-body ul li {
+    font-size: 2vh;
+  }
+
+  #frame4 .parent-card .card .card-footer p {
+    font-size: 2vh;
+    padding-top: 0;
+  }
+  
+}
+
+@media screen and (max-width: 480px) {
+  #frame2 .rectangle .parent-content .left-content .image-content img {
+    width: 37vw;
+    height: 37vw;
+  }
+
+  #vrRight {
+    display: none;
+  }
+
+  #frame2 .rectangle .parent-content .left-content .button button {
+    font-size: 1.7vh;
+    width: 100%;
+  }
+
+  #frame2 .rectangle .parent-content .right-content .box {
+    margin-top: 5%;
+  }
+
+  #frame2 .rectangle .parent-content .right-content .box .body-box {
+    height: 30vh;
+  }
+
+  #frame2 .rectangle .parent-content .left-content .button .fa-angle-right,
+  #frame3 .middle .parent-card .card button .fa-angle-right {
+    background-color: transparent;
+    border: 1px solid white;
+    width: 13%;
+    font-size: 1.8vh;
+  }
+
+  #frame2 .rectangle .parent-content .right-content .box .title-box h1 {
+    font-size: 2vh;
+    font-weight: bold;
+  }
+
+  #frame2 .rectangle .parent-content .right-content .box .body-box p {
+    line-height: 2;
+    font-size: calc(1.7vh);
+  }
+
+  #frame5 .center .right .info {
+    display: grid;
+    grid-template-columns: auto;
+    gap: 5%;
+    scale: 0.8;
+    margin-top: 4%;
+    margin-left: 5%;
   }
 }
