--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,19 +1,19 @@
 .nav {
-    width: 20vw;
+  width: 20vw;
 }
 
 .nav ul {
-    box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
-    -webkit-box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
-    -moz-box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
-    width: 100%;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  width: 100%;
 }
 
 .nav ul li {
-    list-style-type: none;
-    font-weight: bold;
+  list-style-type: none;
+  font-weight: bold;
 }
 
 .nav ul .active {
-    border-bottom: 2px solid orange;
+  border-bottom: 2px solid orange;
 }
