--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1400px) {
+@media screen and (max-width: 1400px)  {
   body {
     --title: 80px;
     --sub-title: 20px;
@@ -36,6 +36,64 @@
 
   #frame1 .parent-content .left-content .parent-preview {
     width: 55%;
+  }
+
+  #frame2 .rectangle {
+    width: 130vh;
+    height: 80vh;
+  }
+
+  #frame2 .rectangle .parent-content .left-content .image-content img {
+    width: 60vh;
+    height: 60vh;
+  }
+
+    
+  #frame2 .rectangle .parent-content .left-content .image-content .circle {
+    height: 5vh;
+    width: 5vh;
+    position: absolute;
+    top: 2vh;
+    right: 3vh;
+  }
+
+  #frame2 .rectangle .parent-content .left-content .button button {
+    width: 30vh;
+    font-size: 2.2vh;
+  }
+
+    #frame2 .rectangle .parent-content .left-content .button .fa-angle-right,
+  #frame3 .middle .parent-card .card button .fa-angle-right {
+    font-size: 2vh;
+  }
+
+  #frame2 .rectangle .parent-content .right-content .box {
+    width: 55vh;
+  }
+
+  #frame2 .rectangle .parent-content .right-content .box .body-box p {
+    font-size: calc(2vh);
+  }
+
+  #frame2 .rectangle .parent-content .right-content .box .title-box h1 {
+    font-size: 2.5vh;
+    font-weight: bold;
+  }
+
+  #frame2 .rectangle .parent-content .right-content .box .body-box {
+    padding: 1rem;
+    background-color: #fafafa;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    position: relative;
+    height: 30vh;
+  }
+
+  #frame2 .rectangle .parent-content .right-content .mini-image .image img {
+    width: 25vh;
+    height: 25vh;
+    border-radius: 30px;
+    object-fit: cover;
   }
 
   #frame5 .center .left .rectangle {
@@ -447,6 +505,70 @@
 }
 
 @media screen and (max-width: 480px) {
+
+  body {
+    margin: 0;
+  }
+  
+  .nav {
+    position: fixed;
+    z-index: 999;
+    width: 100%; /* Adjust width as needed */
+  }
+  
+  .nav-button {
+    background-color: #fff;
+    color: black;
+    border-radius: 50%;
+    width: 10vw; /* Adjust width based on viewport */
+    height: 10vw; /* Maintain aspect ratio */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    font-size: 2vw; /* Adjust font size based on viewport */
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    position: absolute;
+    top: 20px;
+    left: 10px;
+    z-index: 1000;
+  }
+  
+  .nav-content {
+    position: absolute;
+    top: 12vw; /* Adjust based on nav-button height */
+    left: 0;
+    right: 0;
+    width: 80% !important;
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    border-radius: 0 0 10px 10px !important;
+    transform: scaleY(0);
+    transform-origin: top;
+    transition: transform 0.3s ease-in-out;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border: 1px solid black;
+  }
+  
+  .nav-content a {
+    color: black;
+    text-decoration: none;
+  }
+  
+  .nav-content li {
+    list-style-type: none;
+    font-weight: bold;
+  }
+  
+  .nav-content .active {
+    border-bottom: 2px solid orange;
+  }
+  
+  .nav-content.open {
+    transform: scaleY(1);
+  }
+  
   #frame1 {
     height: 100vh;
   }
@@ -458,6 +580,7 @@
 
   #frame1 .sub-title {
     font-size: 18px;
+    margin-top: 5rem;
   }
 
   #frame1 .btn-hp1, #frame1
