--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,21 +297,38 @@ body {
   border-radius: 2rem;
 }
 
-#frame2 .rectangle .parent-content .right-content .mini-image {
-  margin-top: 2rem;
-}
+  #frame2 .rectangle .parent-content .right-content .mini-image {
+    margin-top: 2rem;
+    overflow: hidden;
+    width: 100%;
+    position: relative;
+  }
 
-#frame2 .rectangle .parent-content .right-content .mini-image .image img {
-  width: 33vh;
-  height: 33vh;
-  border-radius: 30px;
-  object-fit: cover;
-}
-
-#frame2 .rectangle .parent-content .right-content .mini-image .image {
+  #frame2 .rectangle .parent-content .right-content .mini-image .image img {
+    width: 33vh;
+    height: 33vh;
+    border-radius: 30px;
+    object-fit: cover;
+    transition: transform 0.5s ease-in-out;
+  }
+  
+  #frame2 .rectangle .parent-content .right-content .mini-image .image {
   display: flex;
   gap: 7%;
 }
+
+.image-slide-left {
+  transform: translateX(-100%);
+}
+
+.image-slide-right {
+  transform: translateX(100%);
+}
+
+.image-active {
+  transform: translateX(0);
+} 
+
 
 #frame3 {
   height: 115vh;
